adding font and css styles

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,42 +1,129 @@
+@font-face {
+  font-family: 'Poppins';
+  src: url('/public/fonts/poppins/poppins-v22-latin-600.woff2') format('woff2'),
+       url('/public/fonts/poppins/poppins-v22-latin-600.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/public/fonts/poppins/poppins-v22-latin-700.woff2') format('woff2'),
+       url('/public/fonts/poppins/poppins-v22-latin-700.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/public/fonts/poppins/poppins-v22-latin-800.woff2') format('woff2'),
+       url('/public/fonts/poppins/poppins-v22-latin-800.woff') format('woff');
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Nunito';
+  src: url('/public/fonts/nunito/nunito-v26-latin-regular.woff2') format('woff2'),
+        url('/public/fonts/nunito/nunito-v26-latin-regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Nunito';
+  src: url('/public/fonts/nunito/nunito-v26-latin-500.woff2') format('woff2'),
+        url('/public/fonts/nunito/nunito-v26-latin-500.woff') format('woff');     
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Nunito';
+  src: url('/public/fonts/nunito/nunito-v26-latin-600.woff2') format('woff2'),
+        url('/public/fonts/nunito/nunito-v26-latin-600.woff') format('woff');     
+  font-weight: 600;
+  font-style: normal;
+}
+
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --color-blue-100: hsl(197, 100%, 83%);
+  --color-blue-200: hsl(200, 95%, 60%);
+  --color-blue-300: hsl(210, 98%, 54%);
+  --color-blue-400: hsl(240, 95%, 30%);
+
+  --color-white: hsl(0, 0%, 100%);
+  --color-gray-light: hsl(0, 0%, 95%);
+  --color-gray-dark: hsl(0, 0%, 27%);
+  --color-black: hsl(0, 0%, 0%);
+
+  --font-size-xs: 0.75rem; /* 12px */
+  --font-size-sm: 0.875rem; /* 14px */
+  --font-size-md: 1rem; /* 16px */
+  --font-size-lg: 1.125rem; /* 18px */
+  --font-size-xl: 1.25rem; /* 20px */
+  --font-size-2xl: 1.5rem; /* 24px */
+  --font-size-3xl: 1.875rem; /* 30px */
+
+  --spacing-1: 0.25rem; /* 4px */
+  --spacing-2: 0.5rem; /* 8px */
+  --spacing-3: 0.75rem; /* 12px */
+  --spacing-4: 1rem; /* 16px */
+  --spacing-5: 1.25rem; /* 20px */
+  --spacing-6: 1.5rem; /* 24px */
+  --spacing-7: 1.75rem; /* 28px */
+  --spacing-8: 2rem; /* 32px */
+  --spacing-9: 2.25rem; /* 36px */
+  --spacing-10: 2.5rem; /* 40px */
+
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  min-height: 100vh;
+  min-height: 100svh;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Nunito', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Poppins', sans-serif;
+  line-height: 1.1;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+h1 {
+  font-size: clamp(
+    2.5rem,
+    5vw + 1rem,
+    6rem
+  );
+  font-weight: 800;
+ 
+  /* 5.75rem - 3.125rem */
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+h2 {
+  font-size: clamp(
+    2rem,
+    5vw + 0.5rem,
+    3rem
+  );
+  font-weight: 700;
+  
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+h3 {
+  font-size: clamp(
+    1.5rem,
+    5vw + 0.5rem,
+    2.125rem
+  );
+  font-weight: 600;
+  /* 2.5rem - 2rem */
 }
+
