--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -77,8 +77,13 @@
   --spacing-9: 2.25rem; /* 36px */
   --spacing-10: 2.5rem; /* 40px */
 
+  --border-radius: 0.25rem; /* 4px */
+
+  --main-padding: 5rem;
 
 }
+
+
 
 body {
   min-height: 100vh;
@@ -89,7 +94,15 @@ body {
   font-family: 'Nunito', sans-serif;
   font-size: 16px;
   line-height: 1.5;
-}
+
+  /* Grid pattern */
+  background-image: 
+    linear-gradient(90deg, hsla(0, 0%, 78%, 0.2) 1px, transparent 1px),
+    linear-gradient(hsla(0, 0%, 78%, 0.2) 1px, transparent 1px);
+  background-size: 40px 40px; /* Adjust grid spacing */
+  }
+  
+
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif;
@@ -100,7 +113,7 @@ h1 {
   font-size: clamp(
     2.5rem,
     5vw + 1rem,
-    6rem
+    5rem
   );
   font-weight: 800;
  
