--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,49 +1,55 @@
 @font-face {
   font-family: 'Poppins';
-  src: url('/public/fonts/poppins/poppins-v22-latin-600.woff2') format('woff2'),
-       url('/public/fonts/poppins/poppins-v22-latin-600.woff') format('woff');
+  src: url('/fonts/poppins/poppins-v22-latin-600.woff2') format('woff2'),
+       url('/fonts/poppins/poppins-v22-latin-600.woff') format('woff');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Poppins';
-  src: url('/public/fonts/poppins/poppins-v22-latin-700.woff2') format('woff2'),
-       url('/public/fonts/poppins/poppins-v22-latin-700.woff') format('woff');
+  src: url('/fonts/poppins/poppins-v22-latin-700.woff2') format('woff2'),
+       url('/fonts/poppins/poppins-v22-latin-700.woff') format('woff');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Poppins';
-  src: url('/public/fonts/poppins/poppins-v22-latin-800.woff2') format('woff2'),
-       url('/public/fonts/poppins/poppins-v22-latin-800.woff') format('woff');
+  src: url('/fonts/poppins/poppins-v22-latin-800.woff2') format('woff2'),
+       url('/fonts/poppins/poppins-v22-latin-800.woff') format('woff');
   font-weight: 800;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Nunito';
-  src: url('/public/fonts/nunito/nunito-v26-latin-regular.woff2') format('woff2'),
-        url('/public/fonts/nunito/nunito-v26-latin-regular.woff') format('woff');
+  src: url('/fonts/nunito/nunito-v26-latin-regular.woff2') format('woff2'),
+        url('/fonts/nunito/nunito-v26-latin-regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Nunito';
-  src: url('/public/fonts/nunito/nunito-v26-latin-500.woff2') format('woff2'),
-        url('/public/fonts/nunito/nunito-v26-latin-500.woff') format('woff');     
+  src: url('/fonts/nunito/nunito-v26-latin-500.woff2') format('woff2'),
+        url('/fonts/nunito/nunito-v26-latin-500.woff') format('woff');     
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Nunito';
-  src: url('/public/fonts/nunito/nunito-v26-latin-600.woff2') format('woff2'),
-        url('/public/fonts/nunito/nunito-v26-latin-600.woff') format('woff');     
+  src: url('/fonts/nunito/nunito-v26-latin-600.woff2') format('woff2'),
+        url('/fonts/nunito/nunito-v26-latin-600.woff') format('woff');     
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 
@@ -57,6 +63,25 @@
   --color-gray-light: hsl(0, 0%, 95%);
   --color-gray-dark: hsl(0, 0%, 27%);
   --color-black: hsl(0, 0%, 0%);
+
+  --light-blue-gradient : linear-gradient(
+    120deg,
+    hsl(197deg 100% 83%) 0%,
+    hsl(198deg 100% 81%) 26%,
+    hsl(199deg 100% 79%) 34%,
+    hsl(200deg 100% 78%) 40%,
+    hsl(201deg 100% 76%) 44%,
+    hsl(201deg 100% 74%) 47%,
+    hsl(202deg 100% 73%) 51%,
+    hsl(203deg 100% 72%) 54%,
+    hsl(204deg 100% 70%) 58%,
+    hsl(205deg 100% 69%) 62%,
+    hsl(206deg 100% 68%) 66%,
+    hsl(207deg 100% 67%) 72%,
+    hsl(208deg 100% 67%) 79%,
+    hsl(210deg 100% 66%) 88%,
+    hsl(212deg 100% 66%) 100%
+  );
 
   --font-size-xs: 0.75rem; /* 12px */
   --font-size-sm: 0.875rem; /* 14px */
@@ -79,7 +104,7 @@
 
   --border-radius: 0.25rem; /* 4px */
 
-  --main-padding: 5rem;
+  --body-padding: 4rem 7rem;
 
 }
 
@@ -106,37 +131,57 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif;
-  line-height: 1.1;
+  line-height: 1.2;
 }
 
 h1 {
   font-size: clamp(
     2.5rem,
     5vw + 1rem,
-    5rem
+    4rem
   );
   font-weight: 800;
- 
-  /* 5.75rem - 3.125rem */
 }
 
 h2 {
   font-size: clamp(
     2rem,
     5vw + 0.5rem,
-    3rem
+    2.625rem
   );
-  font-weight: 700;
-  
+  font-weight: 600;  
+  margin-bottom: var(--spacing-4);
 }
 
 h3 {
   font-size: clamp(
     1.5rem,
     5vw + 0.5rem,
-    2.125rem
+    1.875rem
   );
   font-weight: 600;
-  /* 2.5rem - 2rem */
+  margin-bottom: var(--spacing-3);
 }
 
+p {
+  font-size: var(--font-size-md);
+  margin-bottom: var(--spacing-2);
+}
+
+a {
+  color: var(--color-blue-400);
+  text-decoration: none;
+  transition: color 0.2s;
+
+  &:hover {
+    color: var(--color-blue-200);
+  }
+}
+
+.sectionHeading {
+  font-family: 'Poppins', sans-serif;
+  font-size: var(--font-size-md);
+  font-weight: 600;
+  margin-bottom: var(--spacing-2);
+  color: var(--color-blue-400);
+}
