--- a/app/components/Header/header.module.css
+++ b/app/components/Header/header.module.css
@@ -50,3 +50,9 @@
   display: flex;
   justify-content: center;
 }
+
+@media screen and (max-width: 768px) {
+  .heroImageWrapper img{
+    display: none;
+  }
+}
