--- a/app/components/Navbar/navbar.module.css
+++ b/app/components/Navbar/navbar.module.css
@@ -1,7 +1,7 @@
 /* components/navbar.module.css */
 .navbar {
   background-color: var(--color-white);
-  padding: .5rem var(--body-padding);
+  padding: 1rem 7rem;
   width: 100%;
   top: 0;
   z-index: 1000;
