--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -54,6 +54,10 @@
 
 
 :root {
+  --font-family-heading: 'Poppins', sans-serif;
+  --font-family-text: 'Nunito', sans-serif;
+
+
   --color-blue-100: hsl(197, 100%, 83%);
   --color-blue-200: hsl(200, 95%, 60%);
   --color-blue-300: hsl(210, 98%, 54%);
@@ -61,6 +65,7 @@
 
   --color-white: hsl(0, 0%, 100%);
   --color-gray-light: hsl(0, 0%, 95%);
+  --color-blue-gray: hsl(237, 20%,84%);
   --color-gray-dark: hsl(0, 0%, 27%);
   --color-black: hsl(0, 0%, 0%);
 
@@ -81,6 +86,27 @@
     hsl(208deg 100% 67%) 79%,
     hsl(210deg 100% 66%) 88%,
     hsl(212deg 100% 66%) 100%
+  );
+
+  --dark-blue-gradient :  linear-gradient(
+    115deg,
+    hsl(237deg 94% 32%) 0%,
+    hsl(235deg 94% 33%) 19%,
+    hsl(233deg 93% 35%) 34%,
+    hsl(230deg 94% 37%) 45%,
+    hsl(227deg 94% 39%) 53%,
+    hsl(225deg 94% 40%) 60%,
+    hsl(223deg 94% 42%) 64%,
+    hsl(220deg 94% 44%) 67%,
+    hsl(218deg 94% 46%) 71%,
+    hsl(215deg 94% 48%) 73%,
+    hsl(213deg 94% 50%) 76%,
+    hsl(211deg 94% 51%) 80%,
+    hsl(208deg 94% 53%) 83%,
+    hsl(206deg 94% 55%) 87%,
+    hsl(203deg 94% 56%) 91%,
+    hsl(201deg 94% 58%) 95%,
+    hsl(199deg 94% 60%) 100%
   );
 
   --font-size-xs: 0.75rem; /* 12px */
@@ -104,8 +130,7 @@
 
   --border-radius: 0.25rem; /* 4px */
 
-  --body-padding: 4rem 7rem;
-
+  --body-padding: clamp(2rem, 4vw, 4rem) clamp(1rem, 7vw, 7rem);
 }
 
 
@@ -116,7 +141,7 @@ body {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  font-family: 'Nunito', sans-serif;
+  font-family: var(--font-family-text);
   font-size: 16px;
   line-height: 1.5;
 
@@ -124,13 +149,13 @@ body {
   background-image: 
     linear-gradient(90deg, hsla(0, 0%, 78%, 0.2) 1px, transparent 1px),
     linear-gradient(hsla(0, 0%, 78%, 0.2) 1px, transparent 1px);
-  background-size: 40px 40px; /* Adjust grid spacing */
+  background-size: 50px 50px; /* Adjust grid spacing */
   }
   
 
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Poppins', sans-serif;
+  font-family: var(--font-family-heading);
   line-height: 1.2;
 }
 
