--- a/app/components/AboutUs/aboutUs.module.css
+++ b/app/components/AboutUs/aboutUs.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: var(--body-padding);
+  margin: var(--body-margin);
 }
 
 .aboutUsContent {
@@ -10,15 +10,12 @@
 }
 
 .aboutUsContent h2 {
-
   margin-bottom: 0;
 }
 
 .textWrapper {
   width: 90ch;
 }
-
-
 
 .textWrapper p {
   font-size: var(--font-size-lg);
@@ -32,7 +29,7 @@
   margin-top: 6rem;
 }
 
-.founderName{
+.founderName {
   font-family: var(--font-family-heading), sans-serif;
   font-size: var(--font-size-2xl);
   font-weight: 600;
@@ -71,4 +68,40 @@
 .founderDescription {
   margin-top: var(--spacing-2);
   color: var(--color-gray-dark);
+}
+
+
+@media screen and (max-width: 768px) {
+
+  .aboutUsContent {
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+
+  .textWrapper {
+    width: 100%;
+  }
+
+  .aboutUsGrid {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+    margin-top: 2rem;
+  }
+
+  .founderCard {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .founderImage {
+    width: 100%;
+  }
+
+  .founderText {
+    width: 100%;
+  }
+
+  .arrowImage  {
+    display: none;
+  }
 }
