--- a/app/components/CTABanner/banner.module.css
+++ b/app/components/CTABanner/banner.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: var(--body-padding);
+  margin: var(--body-margin);
 }
 
 .banner {
@@ -40,4 +40,21 @@
 
 .ctaButton:hover {
   background: var(--color-blue-gray);
+}
+
+@media screen and (max-width: 768px) {
+  .banner {
+    flex-direction: column;
+    gap: 1rem;
+    height: auto;
+    padding: 2rem;
+  }
+
+  .textWrapper {
+    width: 100%;
+  }
+
+  .ctaButton {
+    width: 100%;
+  }
 }
