--- a/app/components/Features/feature.module.css
+++ b/app/components/Features/feature.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: var(--body-padding);
+  margin: var(--body-margin);
 }
 
 .textWrapper {
@@ -41,9 +41,6 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  /* top: -1.5rem;
-  left: 50%;
-  transform: translateX(-50%); */
 }
 
 .featureContent  {
@@ -54,4 +51,19 @@
 .featureContent p {
   font-size: var(--font-size-lg);
 
+}
+
+@media screen and (max-width: 768px) {
+  .featuresGrid {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    width: 100%;
+
+  }
+
+  .featureCard {
+    max-width: 100%;
+    height: auto;
+    padding: 1.5rem;
+  }
 }
