--- a/app/components/CTABanner/banner.module.css
+++ b/app/components/CTABanner/banner.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin: var(--body-margin);
+  margin: var(--horizontal-margin) var(--vertical-margin);
 }
 
 .banner {
@@ -22,6 +22,7 @@
 .textWrapper p {
   font-size: var(--font-size-lg);
   font-weight: 400;
+  margin-bottom: 1.5rem;
 }
 
 .ctaButton {
@@ -30,15 +31,18 @@
   color: var(--color-black);
   border-radius: var(--border-radius);
   width: 16rem;
-  padding: 1rem 2rem;
+  padding: 0.8rem 3rem;
   font-size: var(--font-size-lg);
   font-weight: 600;
   cursor: pointer;
   border: none;
+  text-align: center; /* Center text inside the button */
+  text-decoration: none; /* Remove underline for links */
   transition: background-color 0.3s;
 }
 
 .ctaButton:hover {
+  color: var(--color-black);
   background: var(--color-blue-gray);
 }
 
