--- a/app/components/Header/header.module.css
+++ b/app/components/Header/header.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin: var(--body-margin);
+  margin: var(--horizontal-margin) var(--vertical-margin);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -30,6 +30,7 @@
 }
 
 .heroButton {
+  display: inline-block; /* Ensure it behaves like a button */
   width: 16rem;
   padding: 1rem 2rem;
   font-size: var(--font-size-md);
@@ -38,13 +39,17 @@
   border-radius: 0.5rem;
   background-color: var(--color-blue-400);
   color: var(--color-white);
+  text-align: center; /* Center text inside the button */
+  text-decoration: none; /* Remove underline for links */
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 .heroButton:hover {
+  color: var(--color-white);
   background-color: var(--color-blue-300);
 }
+
 
 .heroImageWrapper {
   display: flex;
