refactor styles and structure for offerings pages; update background color, add new grids, and clean up markup

--- a/app/components/Features/feature.module.css
+++ b/app/components/Features/feature.module.css
@@ -32,7 +32,7 @@
 
   padding: 2rem;
   border-radius: 0.5rem;
-  background: var(--light-blue-gradient);
+  background: #F7F7F7;
   height: 16rem;
   position: relative;
 }
