--- a/app/components/CTABanner/banner.module.css
+++ b/app/components/CTABanner/banner.module.css
@@ -51,7 +51,7 @@
     flex-direction: column;
     gap: 1rem;
     height: auto;
-    padding: 2rem;
+    padding: 1.5rem;
   }
 
   .textWrapper {
@@ -60,5 +60,6 @@
 
   .ctaButton {
     width: 100%;
+    padding-bottom: 1rem;
   }
 }
