--- a/app/components/Features/feature.module.css
+++ b/app/components/Features/feature.module.css
@@ -53,6 +53,17 @@
 
 }
 
+.cardFooter {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: .5rem;
+
+  position: absolute;
+  bottom: 30px;
+  right: 38px;
+}
+
 @media screen and (max-width: 768px) {
   .featuresGrid {
     grid-template-columns: 1fr;
