--- a/app/components/OurMission/mission.module.css
+++ b/app/components/OurMission/mission.module.css
@@ -30,7 +30,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: hsl(225, 81%, 39%, 70%);
+  background-color: hsla(226, 86%, 9%, 0.7);
   z-index: 2;
 }
 
